5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1771_672.log
== TEST (2019-05-21 22:53:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
form numpy import *
num = int(input("digite o numero: "))
vetor = ones(num,dtype = int)
-- ERROR:
File "XXXX", line 2
    form numpy import *
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:53:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("digite o numero: "))
vetor = ones(num,dtype = int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 22:53:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("digite o numero: "))
vetor = ones(num,dtype = int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 22:53:52) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("digite o numero: "))
vetor = ones(num,dtype = int)
print(vetor)
-- EXECUTION TIME:
0.554903
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:12:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("digite o numero: "))
vetor = zeros(num,dtype = int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:13:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("digite o numero: "))
vetor = ones(num,dtype = float)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:14:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("digite o numero: "))
vetor = ones(num)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:14:54) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("digite o numero: "))
vetor = twos(num,dtype = int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:12:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("digite o numero: "))
vetor = one(num,dtype = int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:12:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("digite o numero: "))
vetor = one(num,dtype = int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:12:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("digite o numero: "))
vetor = ones(num,dtype = int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:13:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
num = int(input("digite o numero: "))
vetor = ones(num,dtype = int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:42:55) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
vone = ones(n,dtype = int)
print(vone)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:43:12) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
vone = ones(n,dtype = int)
print(vone)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:43:16) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
vone = ones(n,dtype = int)
print(vone)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:43:39) 
-- CODE:
from numpy import *
n = int(input("digite o numero: "))
vone = ones(n)
print(vone)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
